<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/titulo_grafo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:background="#000000"
        android:text="@string/TituloGrafo"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtnum_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/HintNumeroMatriz"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_enviar_numNodos" />

    <TextView
        android:id="@+id/tvMatrizT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="#000000"
        android:text="@string/TvMatrizT"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tv_matriz"
        app:layout_constraintTop_toBottomOf="@+id/btn_agregarValor" />

    <TextView
        android:id="@+id/tv_matriz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:background="#000000"
        android:text="@string/Matriz"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_agregarValor" />

    <Button
        android:id="@+id/btn_agregarValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:onClick="datosGrafo"
        android:text="@string/btnAgregarA_Matriz"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum_valor" />

    <EditText
        android:id="@+id/txt_numNodos"
        android:layout_width="312dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/HintnumNodos"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_grafo" />

    <Button
        android:id="@+id/btn_enviar_numNodos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="dimensionMatriz"
        android:text="@string/btnDimenMatriz"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_numNodos" />

    <TextView
        android:id="@+id/tv_resultMatriz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:background="#FFFFFF"
        android:text="@string/TvResultadoMatriz"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_matriz" />

</androidx.constraintlayout.widget.ConstraintLayout>