<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Encoders"
    android:background="@drawable/background">

    <Button
        android:id="@+id/btnDecrypt"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="#1D1C1C"
        android:onClick="BinaryED"
        android:text="@string/btnBinary"
        android:textColor="#C1FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEncrypt" />

    <Button
        android:id="@+id/btnHex"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:background="#1D1C1C"
        android:onClick="HexED"
        android:text="@string/btnHex"
        android:textColor="#C1FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDecrypt" />

    <Button
        android:id="@+id/btnGrafo"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:layout_marginTop="104dp"
        android:background="#1D1C1C"
        android:onClick="GrafosActivity"
        android:text="@string/btnGrafo"
        android:textColor="#C1FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDecrypt" />

    <Button
        android:id="@+id/btnAscii"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:onClick="ASCIIED"
        android:text="@string/btnAscii"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHex" />

    <Button
        android:id="@+id/btnOct"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="#1D1C1C"
        android:onClick="OctED"
        android:text="@string/btnOct"
        android:textColor="#C1FFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAscii"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnEncrypt"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:layout_marginTop="148dp"
        android:background="#1D1C1C"
        android:onClick="Base64ED"
        android:text="@string/btnBase64"
        android:textColor="#C1FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TxCryptoTitle"
        android:layout_width="241dp"
        android:layout_height="57dp"
        android:background="#95949494"
        android:text="@string/TitleEncoder"
        android:textColor="#000000"
        android:textSize="24dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btnEncrypt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

</androidx.constraintlayout.widget.ConstraintLayout>