<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SafePassword">

    <TextView
        android:id="@+id/txtTituloSecurePassword"
        android:layout_width="235dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:background="#95949494"
        android:text="@string/safePasswordTitle"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNota"
        android:layout_width="313dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:background="#95949494"
        android:text="@string/nota"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloSecurePassword" />

    <Button
        android:id="@+id/botonLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:background="#1D1C1C"
        android:onClick="botonLimpiar"
        android:text="@string/btnClean"
        android:textColor="#C1FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/botonVerificar"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOutput" />

    <Button
        android:id="@+id/botonVerificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:background="#1D1C1C"
        android:onClick="principal"
        android:text="@string/btnCheck"
        android:textColor="#C1FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOutput" />

    <EditText
        android:id="@+id/editTextIngreseContraseña"
        android:layout_width="222dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:background="#A6AAAAAA"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/passwordHint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNota" />

    <EditText
        android:id="@+id/txtOutput"
        android:layout_width="222dp"
        android:layout_height="164dp"
        android:layout_marginTop="28dp"
        android:background="#A6AAAAAA"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/passwordReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIngreseContraseña" />

</androidx.constraintlayout.widget.ConstraintLayout>