<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HEXED">

    <TextView
        android:id="@+id/txtASCIITitle"
        android:layout_width="259dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:background="#95949494"
        android:text="@string/TittleHex"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EtTxtToAscii"
        android:layout_width="260dp"
        android:layout_height="143dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:background="#A6AAAAAA"
        android:textColorHint="#E6000000"
        android:hint="@string/HintTextHex"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtASCIITitle" />

    <Button
        android:id="@+id/btnDecodeAscii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="240dp"
        android:onClick="BtnDecode"
        android:text="@string/Base64Decoder"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEncodeAscii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="240dp"
        android:onClick="btnEncode"
        android:background="#1D1C1C"
        android:textColor="#C1FFFFFF"
        android:text="@string/Base64Encode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toEndOf="@+id/btnDecodeAscii"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ETAsciiToTxt"
        android:layout_width="260dp"
        android:layout_height="143dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:background="#A6AAAAAA"
        android:textColorHint="#E6000000"
        android:hint="@string/HintHex"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDecodeAscii"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>